--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://kartalugur:rQieOVB68ocs10vw@cluster0.l0bvswv.mongodb.net/
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=asterixCharacterDB
