--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.data.mongodb.uri=${MONGODB_URI}
-spring.data.mongodb.database=asterixCharacterDB
+spring.data.mongodb.database=${MONGODB_DATABASE}
